# mialsuperresolutiontoolkit

./: .all-contributorsrc  .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  Dockerfile  LICENSE.txt  README.md  build_bidsapp.sh  build_jupyter.sh  build_sphinx_docs.sh  contributors.txt  doxygen.config  get_version.py  pep8speaks.yml  setup.py  setup_pypi.py
.circleci/: config.yml  test-01_outputs.txt  test-02_outputs.txt  test-03_outputs.txt  test-04_outputs.txt  test_outputs.txt
data/: .bidsignore  CHANGES  README  dataset_description.json  listScansRECONauto.txt  participants.json  participants.tsv  superresolution_autoloc.sh
docker/: .dockerignore  Dockerfile
docker-build/: Dockerfile
documentation/: LICENSE.rst  api_commandlineinterface.rst  api_pipelines.rst  api_postprocess.rst  api_preprocess.rst  api_reconstruction.rst  api_utils.rst  api_workflows.rst  bids.rst  changes.rst  citing.rst  conf.py  contributing.rst  contributors.rst  devguide_mac.md  devguide_ubuntu.md  index.rst  installation.rst  mainpage.md  outputs.rst  requirements.txt  usage.rst  userguide_docker.md
examples/: run_docker_jupyter.sh
notebooks/: CorrectSliceIntensity.ipynb  ImageReconstruction-dev.ipynb  IntensityStandardization.ipynb  NiLearnPlotAnatSR.ipynb  SliceBySliceN4BiasFieldCorrection.ipynb  StacksOrderSelection.ipynb  SubjectReport.ipynb  brainExtraction.ipynb  brainExtractionU-Net.ipynb  brainHack.ipynb  crash-20191023-162135-root-image_SR-3d4e4b79-53d1-49d9-ba9d-c9add971a0a4.pklz  crash-20191023-165141-root-image_SR-9fd259ac-b6d5-4e55-b621-66c1304eda4c.pklz  crash-20191023-170808-root-image_SR-0ddd4e31-2300-48e1-87e0-ea8d57902918.pklz  crash-20191023-170949-root-image_SR-f91af286-b353-49d9-bfcf-0b018a35bdfb.pklz  crash-20200826-150727-hkebiri-Multiple_Brain_extraction-13880d5a-1c67-49ad-ab43-ad2eb34a9da6.pklz  crash-20200826-150806-hkebiri-Multiple_Brain_extraction-fb02b5dd-c5ad-4c00-9b6d-f8050757102c.pklz  crash-20200902-170910-hkebiri-Multiple_Brain_extraction-b18e8797-786c-468f-8422-39c9a03c92b7.pklz  crash-20200902-182548-hkebiri-Multiple_Brain_extraction-94bdeb49-6c0b-47f5-9a03-ddeb8f3fe5d8.pklz  histogramNormalization.ipynb  optimize_tensorflow_checkpoint.ipynb  orientImage.ipynb  srr.ipynb  superResolution.ipynb
pymialsrtk/: info.py  parser.py  run_preprocess.py  run_preprocess.sh  utils.py
scripts/: build_bidsapp.sh  build_jupyter.sh  (+4 more)
src/: CMakeLists.txt
src/BrainLocalizationExtraction/: CMakeLists.txt  brainExtraction.py  brainExtractionTwoSteps.py  mialsrtkFetalBrainExtractionGUI.py  mialsrtkRefineHRMaskByIntersection.cxx  mialsrtkSegmentationWeightedFusion.cxx  mialsrtkSegmentationWeightedFusion.h  mialsrtkSegmentationWeightedFusionWithUnanimousConsensus.cxx  mialsrtkSegmentationWeightedFusionWithUnanimousConsensus.h
src/Code/BTK/: btkNLMTool.h  btkNLMTool.txx
src/Code/CRKit/: crlMSTAPLEImageFilter.h  crlMSTAPLEImageFilter.txx
src/Code/Maths/: ComputeNormalizedCrossCorrelationImageFilter.h  ComputeNormalizedCrossCorrelationImageFilter.txx  itkFFTPadImageFilter.h  itkFFTPadImageFilter.txx  mialsrtkMaths.h  vnl_index_sort.h
src/Code/Reconstruction/: mialsrtkImageIntersectionCalculator.h  mialsrtkImageIntersectionCalculator.txx  mialsrtkJointRobustTVGMMCostFunctionWithImplicitGradientDescent.h  mialsrtkJointRobustTVGMMCostFunctionWithImplicitGradientDescent.txx  mialsrtkLowToHighImageResolutionMethod.h  mialsrtkLowToHighImageResolutionMethod.txx  mialsrtkOrientedSpatialFunction.h  mialsrtkOrientedSpatialFunction.txx  mialsrtkResampleImageByInjectionFilter.h  mialsrtkResampleImageByInjectionFilter.txx  mialsrtkRobustSuperResolutionRigidImageFilterWithGMM.h  mialsrtkRobustSuperResolutionRigidImageFilterWithGMM.txx  mialsrtkSuperResolutionRigidImageFilterWithImplicitGradientDescent.h  mialsrtkSuperResolutionRigidImageFilterWithImplicitGradientDescent.txx  mialsrtkTotalVariationCostFunctionWithImplicitGradientDescent.h  mialsrtkTotalVariationCostFunctionWithImplicitGradientDescent.txx
src/Code/Registration/: mialsrtkBSplineInterpolateImageFunction.h  mialsrtkBSplineInterpolateImageFunction.hxx  mialsrtkImageRegistrationFilter.h  mialsrtkImageRegistrationFilter.txx  mialsrtkRegistration.h  mialsrtkRigidRegistration.h  mialsrtkRigidRegistration.txx  mialsrtkSliceBySliceRigidRegistration.h  mialsrtkSliceBySliceRigidRegistration.txx
src/Code/Timer/: mialsrtkTimeHelper.h
src/Code/Transformations/: mialsrtkSliceBySliceTransform.h  mialsrtkSliceBySliceTransform.txx  mialsrtkSliceBySliceTransformBase.h  mialsrtkVersorSliceBySliceTransform.h  mialsrtkVersorSliceBySliceTransform.txx
src/Denoising/: CMakeLists.txt  btkNLMDenoising.cxx  mialsrtkGaussianDenoising.cxx  mialsrtkTVDenoising.cxx
src/Evaluation/: CMakeLists.txt  mialsrtkComputeHausdorffDistance.cxx  mialsrtkComputeHistogramSpread.cxx  mialsrtkComputeImageMedianCNR.cxx  mialsrtkEvaluateContrast.cxx  mialsrtkEvaluateLabelOverlapMeasures.cxx  mialsrtkEvaluateReconstructionQualityMeasures.cxx  mialsrtkEvaluateSharpnessMeasures.cxx
src/IntensityStandardization/: CMakeLists.txt  mialsrtkCorrectBiasField.cxx  mialsrtkCorrectBiasFieldWithMotionApplied.cxx  mialsrtkCorrectSliceIntensity.cxx  mialsrtkHistogramNormalization.py  mialsrtkImageProjectionToPositiveIntensities.cxx  mialsrtkIntensityRescaleToMaxInAllImages.cxx  mialsrtkIntensityStandardization.cxx  mialsrtkN4BiasFieldCorrection.cxx  mialsrtkSliceBySliceCorrectBiasField.cxx  mialsrtkSliceBySliceN4BiasFieldCorrection.cxx  setup.py.in
src/IntensityStandardization/pymialsrtkHistogramNormalization/: mialsrtkHistogramNormalization.py
src/MotionEstimation/: CMakeLists.txt  mialsrtkImageReconstruction.cxx  mialsrtkSDIComputation.cxx
src/Resources/: resources.qrc
src/SuperResolution/: CMakeLists.txt  mialsrtkRobustTVSuperResolutionWithGMM.cxx  mialsrtkTVSuperResolution.cxx
src/Tools/: CMakeLists.txt  mialsrtkComputeVolume.cxx  mialsrtkCreateImageWithHalo.cxx  mialsrtkCreateWhiteMatterVolumeFromLabels.cxx  mialsrtkCropImageUsingMask.cxx  mialsrtkFourierTransform.cxx  mialsrtkMaskImage.cxx  mialsrtkOrientImage.cxx
(+328 files in other folders)
